@@ -1,3 +1,7 @@
+2007-05-10  Shawn Betts  <sabetts@shitbender.gagrod>
+
+	* core.lisp (:key-press): ungrab the keyboard after reading the key.
+
 2007-05-10  Shawn Betts  <sabetts@vcn.bc.ca>
 
 	* core.lisp (handle-keymap): don't grab the keyboard
